fixed visibility issue logo oranje reporter

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -164,8 +164,9 @@
 			}
 		}
 
-		p {
+		#or {
 			font-family: Oswald, sans-serif;
+			font-size: 1.8vw;
 			color: #291f1e;
 
 			&:hover {
