--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -11,6 +11,7 @@
 			a {
 				text-decoration: none;
 			}
+
 			.home {
 				margin: 1rem 2rem;
 				width: 7rem;
@@ -26,10 +27,6 @@
 					font-size: 1.5rem;
 					font-weight: 600;
 					color: #ce0f69;
-				}
-
-				.op {
-					font-family: Oswald, sans-serif;
 				}
 			}
 		}
